# arcal-busmon

./: CMakeLists.txt  NOTES.md  README.md  arcal-config.json  busmon-ui.sh  pyproject.toml
busmon/: __init__.py  app.py  message_store.py  model.py  owp_client.py
pub/: CMakeLists.txt  pub_continuous.cpp  uci_traffic_gen.cpp
src/: DecodeChain.cpp  DecodeChain.h  LogWriter.cpp  LogWriter.h  StreamPipe.cpp  StreamPipe.h  TopicMonitor.cpp  TopicMonitor.h  main.cpp  pub_rich.cpp
ui/: server.py
ui/static/: index.html
